# wila

./: .appveyor.yml  .gitignore  CMakeLists.txt  FindTBB.cmake  LICENSE  README.md  wila.kdev4  wila.pc.in  wila.props.in
debian/: README.Debian  README.source  changelog  control  copyright  libwila-dev.install  libwila-dev.lintian-overrides  rules  source.lintian-overrides
doc/: GettingStarted.md  debian-packaging.md
doc/Introduction/: Introduction.sln
doc/Introduction/Introduction/: Introduction.cpp  Introduction.vcxproj  Introduction.vcxproj.filters
include/: core.hpp  random.hpp  sce.cpp  sce.h  sce.hpp
include/wila/: common.h  constructs.hpp  core.h  core.hpp  evaluations.hpp  interop_c_cpp.hpp  interop_c_structs.h  interop_rcpp.hpp  logging.hpp  multithreading.hpp  random.hpp  rosenbrock.hpp  sce.h  sce.hpp  simplex.hpp  urs.hpp  utils.hpp  wrappers.hpp
src/: sce.cpp
tests/: CMakeLists.txt  common.cpp  common.h  main.cpp  mhcpptest.sln  mhcpptest.vcxproj  mhcpptest.vcxproj.filters  sort_unit_tests.R
